Support the http method input and verification. TODO: implement the methods